welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for  (x<-0 to 6) {
               ^Program:17: error: overloaded method value writeMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (Boolean)
		writeMessage(testcol());
                ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
	for(x<-0 to 6) {
             ^